# privacy-chat-function

./: .env.sample  .funcignore  README.md  function_app.py  pyproject.toml  requirements.txt
src/: __init__.py  api.py
src/defs/: __init__.py  errors.py  messages.py  responses.py
