[project]
name = "chatfunc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-functions>=1.21.3",
    "openai>=1.52.2",
    "pip>=24.2",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = ["mypy>=1.13.0"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["azure.*", "openai.*"]
ignore_missing_imports = true
